--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,9 @@
   <!--basic colors-->
   <color name="red">#dc0c0c</color>
   <color name="white">#ffffff</color>
+  <color name="black">#000000</color>
+  <color name="gray">#958f8f</color>
+
   <!--color for scanner-->
   <color name="scan_corner_color">#0cdca8</color>
 
