--- a/app/src/main/res/layout/item_pictures.xml
+++ b/app/src/main/res/layout/item_pictures.xml
@@ -9,28 +9,11 @@
     android:layout_height="130dp">
 
   <ImageView
-      android:id="@+id/iv_picture_1"
+      android:id="@+id/iv_picture"
       android:layout_marginTop="10dp"
       android:src="@drawable/ic_launcher_background"
       android:layout_width="0dp"
       android:layout_weight="1"
       android:layout_height="wrap_content"
       android:layout_marginBottom="10dp"/>
-  <ImageView
-      android:id="@+id/iv_picture_2"
-      android:layout_marginTop="10dp"
-      android:src="@drawable/ic_launcher_background"
-      android:layout_width="0dp"
-      android:layout_weight="1"
-      android:layout_height="wrap_content"
-      android:layout_marginBottom="10dp"/>
-  <ImageView
-      android:id="@+id/iv_picture_3"
-      android:layout_marginTop="10dp"
-      android:src="@drawable/ic_launcher_background"
-      android:layout_width="0dp"
-      android:layout_weight="1"
-      android:layout_height="wrap_content"
-      android:layout_marginBottom="10dp"/>
-
 </LinearLayout>
