--- a/app/src/main/res/layout/activity_view_picture_activity.xml
+++ b/app/src/main/res/layout/activity_view_picture_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
@@ -7,15 +8,83 @@
     android:orientation="vertical">
 
 
+  <RelativeLayout
+      android:id="@+id/toolbar_layout"
+      android:background="@color/colorPrimary"
+      android:layout_width="match_parent"
+      android:layout_height="56dp">
+
+
+    <TextView
+        android:id="@+id/btn_cancel"
+        android:layout_centerVertical="true"
+        android:text="取消"
+        android:layout_marginLeft="20dp"
+        android:textSize="16sp"
+        android:textColor="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <RelativeLayout
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+      <TextView
+          android:id="@+id/btn_activity"
+          android:background="@color/white"
+          android:textColor="@color/black"
+          android:text="动态"
+          android:gravity="center"
+          android:textSize="16sp"
+          android:layout_width="80dp"
+          android:layout_height="40dp"/>
+      <TextView
+          android:id="@+id/btn_information"
+          android:text="消息"
+          android:background="@color/black"
+          android:gravity="center"
+          android:textColor="@color/white"
+          android:textSize="16sp"
+          android:layout_toRightOf="@id/btn_activity"
+          android:layout_width="80dp"
+          android:layout_height="40dp"/>
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/btn_confirm"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="20dp"
+        android:layout_centerVertical="true"
+        android:text="发表"
+        android:textSize="16sp"
+        android:textColor="@color/gray"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+  </RelativeLayout>
+
+  <EditText
+
+      android:id="@+id/tv_content"
+      android:layout_below="@+id/toolbar_layout"
+      android:layout_margin="20dp"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"/>
+
   <!--展示上传的图片-->
   <GridView
+      android:layout_below="@id/tv_content"
+      android:layout_marginTop="150dp"
       android:id="@+id/gridView"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="15dp"
+      android:layout_height="match_parent"
+      android:layout_marginLeft="15dp"
+      android:layout_marginRight="15dp"
       android:columnWidth="60dp"
       android:horizontalSpacing="10dp"
       android:numColumns="auto_fit"
       android:verticalSpacing="10dp" />
 
-</LinearLayout>
+</RelativeLayout>
