--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,21 @@
     android:orientation="vertical"
     tools:context=".ui.main.MainActivity">
 
+  <RelativeLayout
+      xmlns:android="http://schemas.android.com/apk/res/android"
+      android:orientation="vertical"
+      android:background="@color/colorPrimary"
+      android:layout_width="match_parent"
+      android:layout_height="56dp">
+
+    <ImageView
+        android:id="@+id/btn_profile"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="20dp"
+        android:src="@drawable/ic_profile"
+        android:layout_width="36dp"
+        android:layout_height="36dp"/>
+  </RelativeLayout>
   <android.support.v4.view.ViewPager
       android:id="@+id/viewpager"
       android:layout_width="match_parent"
