--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -10,7 +10,7 @@
       android:id="@+id/btn_teacher_access"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="200dp"
-      android:text="老师登录"
+      android:text="我是老师"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>
 
@@ -18,7 +18,7 @@
       android:id="@+id/btn_parent_access"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="10dp"
-      android:text="家长登录"
+      android:text="我是家长"
       android:layout_below="@+id/btn_teacher_access"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>
