[ADD]生成二维码具体的类

--- a/app/src/main/res/layout/activity_teacher_create_class.xml
+++ b/app/src/main/res/layout/activity_teacher_create_class.xml
@@ -23,8 +23,36 @@
     <EditText
         android:id="@+id/edt_teacher_number"
         android:hint="@string/teacher_number"
-        android:inputType="text"
+        android:inputType="number"
         android:layout_marginTop="130dp"
+        android:layout_marginRight="70dp"
+        android:layout_marginLeft="70dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <EditText
+        android:id="@+id/edt_class_name"
+        android:hint="@string/class_name"
+        android:inputType="text"
+        android:layout_marginTop="160dp"
+        android:layout_marginRight="70dp"
+        android:layout_marginLeft="70dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/btn_import_students_info"
+        android:hint="@string/teacher_number"
+        android:layout_marginTop="190dp"
+        android:layout_marginRight="70dp"
+        android:layout_marginLeft="70dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/btn_import_teacher_info"
+        android:hint="@string/import_teacher_info"
+        android:layout_marginTop="220dp"
         android:layout_marginRight="70dp"
         android:layout_marginLeft="70dp"
         android:layout_width="match_parent"
