--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -27,7 +27,7 @@
       android:layout_centerHorizontal="true"
       android:layout_marginTop="10dp"
       android:text="@string/create_class"
-      android:layout_below="@+id/btn_login_directly"
+      android:layout_below="@+id/btn_join_new_class"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>
 </RelativeLayout>
