--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,6 +9,7 @@
     tools:context=".ui.main.MainActivity">
 
   <RelativeLayout
+      android:id="@+id/toolbar_layout"
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:orientation="vertical"
       android:background="@color/colorPrimary"
@@ -20,14 +21,26 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="20dp"
         android:src="@drawable/ic_profile"
-        android:layout_width="36dp"
-        android:layout_height="36dp"/>
+        android:layout_width="24dp"
+        android:layout_height="24dp"/>
   </RelativeLayout>
+
+
+  <android.support.design.widget.FloatingActionButton
+      android:id="@+id/fab"
+      app:fabSize="normal"
+      android:layout_alignParentBottom="true"
+      android:layout_alignParentRight="true"
+      android:layout_marginBottom="30dp"
+      android:layout_marginRight="30dp"
+      android:layout_width="48dp"
+      android:layout_height="48dp"
+      />
   <android.support.v4.view.ViewPager
+      android:layout_below="@+id/toolbar_layout"
       android:id="@+id/viewpager"
       android:layout_width="match_parent"
-      android:layout_height="0dp"
-      android:layout_weight="1"
+      android:layout_height="match_parent"
       android:layout_above="@+id/bottom_navigation_bar"/>
 
   <com.ashokvarma.bottomnavigation.BottomNavigationBar
@@ -36,4 +49,4 @@
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       />
-</LinearLayout>
+</RelativeLayout>
