--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,8 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_below="@+id/tb_news"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/srl_news">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_news"
