--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -1,6 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:id="@+id/et_search"
+        android:lines="1"
+        android:maxLines="1"
+        android:inputType="text"
+        android:imeOptions="actionSearch"
+        android:hint="@string/address_search"
+        android:background="@drawable/bg_search"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_margin="8dp"
+        android:paddingLeft="64dp"
+        android:paddingRight="64dp"/>
+
+    <ImageView
+        android:src="@drawable/search"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"/>
+
+    <ExpandableListView
+        android:id="@+id/elv_comment"
+        android:layout_below="@+id/et_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </ExpandableListView>
+
+</RelativeLayout>
