--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
   <!--color for scanner-->
   <color name="scan_corner_color">#0cdca8</color>
 
+<color name="colorBlack">#000000</color>
+
 </resources>
