--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -13,16 +13,26 @@
 
     <TextView
         android:id="@+id/tv_news_name"
-        android:textSize="18sp"
+        android:textSize="14sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/iv_news_avatar"
         android:layout_toEndOf="@+id/iv_news_avatar"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="15dp"
         tools:text="张老师"/>
 
     <TextView
-        android:id="@+id/tv_news_sort"
+        android:id="@+id/tv_new_time"
+        android:textSize="12sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/iv_news_avatar"
+        android:layout_toEndOf="@+id/iv_news_avatar"
+        android:layout_marginTop="38dp"
+        tools:text="12:34"/>
+
+    <TextView
+        android:id="@+id/tv_news_type"
         android:textSize="18sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,24 +50,32 @@
         android:layout_below="@id/iv_news_avatar"
         android:layout_margin="8dp"
         tools:text="啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊"/>
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_news_pictures"
+        android:layout_below="@+id/tv_news"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     
     <View
-        android:layout_below="@+id/tv_news"
+        android:id="@+id/divider"
+        android:layout_below="@+id/rv_news_pictures"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@color/bg_color"/>
 
-    <ListView
-        android:id="@+id/lv_news_comment"
-        android:layout_below="@+id/tv_news"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_news_comment"
+        android:layout_below="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    </ListView>
+    </android.support.v7.widget.RecyclerView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/lv_news_comment"
+        android:layout_below="@id/rv_news_comment"
         android:orientation="horizontal">
         <Button
             android:id="@+id/btn_news_unread"
