--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <include
-        android:id="@+id/tb_news"
-        layout="@layout/view_toolbar"/>
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:layout_below="@+id/tb_news"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/srl_news">
+    android:id="@+id/srl_news">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_news"
@@ -20,7 +13,6 @@
             android:layout_height="wrap_content">
 
         </android.support.v7.widget.RecyclerView>
-    </android.support.v4.widget.SwipeRefreshLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/share_btn"
@@ -34,5 +26,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"/>
+</android.support.v4.widget.SwipeRefreshLayout>
 
-</RelativeLayout>
+
