--- a/app/src/main/res/layout/activity_send_comment.xml
+++ b/app/src/main/res/layout/activity_send_comment.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <include layout="@layout/view_toolbar"/>
 
@@ -15,8 +16,12 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
-        android:hint="@string/parent_comment_hint"
+        android:background="@drawable/bg_content"
+        android:padding="6dp"
+        android:gravity="start"
+        android:hint="@string/evaluation_hint"
         />
+
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -30,14 +35,25 @@
             android:id="@+id/text1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/parent_comment_text1"
+            android:text="@string/evaluation_text1"
             />
+        <TextView
+            android:id="@+id/score1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/evaluation_score_zero"
+            android:layout_toEndOf="@id/text1"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:textColor="@color/colorPrimary"
+           />
+
         <SeekBar
             android:id="@+id/seekBar1"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:layout_toEndOf="@+id/text1"
-            android:layout_toRightOf="@id/text1"
+            android:layout_toEndOf="@+id/score1"
+            android:layout_toRightOf="@id/score1"
             android:max="20"/>
 
         <TextView
@@ -45,15 +61,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/seekBar1"
-            android:text="@string/parent_comment_text2"
-            android:layout_marginTop="15dp"/>
+            android:text="@string/evaluation_text2"
+            android:layout_marginTop="15dp"
+            />
+
+        <TextView
+            android:id="@+id/score2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/evaluation_score_zero"
+            android:layout_below="@id/seekBar1"
+            android:layout_toRightOf="@id/text2"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:textColor="@color/colorPrimary"
+
+            />
+
         <SeekBar
             android:id="@+id/seekBar2"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_below="@+id/text1"
-            android:layout_toEndOf="@+id/text1"
-            android:layout_toRightOf="@id/text1"
+            android:layout_toEndOf="@+id/score2"
+            android:layout_toRightOf="@id/score2"
             android:layout_marginTop="15dp"
             android:max="20"/>
 
@@ -62,15 +94,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/text2"
-            android:text="@string/parent_comment_text3"
+            android:text="@string/evaluation_text3"
             android:layout_marginTop="15dp"/>
+
+        <TextView
+            android:id="@+id/score3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/evaluation_score_zero"
+            android:layout_below="@id/seekBar2"
+            android:layout_toRightOf="@id/text3"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:textColor="@color/colorPrimary"
+
+            />
         <SeekBar
             android:id="@+id/seekBar3"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_below="@+id/text2"
-            android:layout_toEndOf="@+id/text1"
-            android:layout_toRightOf="@id/text1"
+            android:layout_toEndOf="@+id/score3"
+            android:layout_toRightOf="@id/score3"
             android:layout_marginTop="15dp"
             android:max="20"/>
 
@@ -79,15 +125,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/text3"
-            android:text="@string/parent_comment_text4"
+            android:text="@string/evaluation_text4"
             android:layout_marginTop="15dp"/>
+
+        <TextView
+            android:id="@+id/score4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/evaluation_score_zero"
+            android:layout_below="@id/seekBar3"
+            android:layout_toRightOf="@id/text3"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:textColor="@color/colorPrimary"
+
+            />
+
         <SeekBar
             android:id="@+id/seekBar4"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_below="@+id/text3"
-            android:layout_toEndOf="@+id/text1"
-            android:layout_toRightOf="@id/text1"
+            android:layout_toEndOf="@+id/score4"
+            android:layout_toRightOf="@id/score4"
             android:layout_marginTop="15dp"
             android:max="20"
             />
@@ -97,18 +158,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/text4"
-            android:text="@string/parent_comment_text5"
+            android:text="@string/evaluation_text5"
             android:layout_marginTop="15dp"/>
+
+        <TextView
+            android:id="@+id/score5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/evaluation_score_zero"
+            android:layout_below="@id/seekBar4"
+            android:layout_toRightOf="@id/text5"
+            android:textColor="@color/colorPrimary"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            />
 
         <SeekBar
             android:id="@+id/seekBar5"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_below="@+id/text4"
-            android:layout_toEndOf="@+id/text1"
-            android:layout_toRightOf="@id/text1"
+            android:layout_toEndOf="@+id/score5"
+            android:layout_toRightOf="@id/score5"
             android:layout_marginTop="15dp"
             android:max="20"/>
+
     </RelativeLayout>
 
     <Button
