--- a/app/src/main/res/layout/item_address_group.xml
+++ b/app/src/main/res/layout/item_address_group.xml
@@ -2,14 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:padding="3dp">
 
     <TextView
         android:id="@+id/tv_address_group"
-        android:gravity="center"
         android:layout_margin="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="小助手"/>
+        tools:text="小助手"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"/>
 
 </RelativeLayout>
