--- a/app/src/main/res/layout/activity_send_comment.xml
+++ b/app/src/main/res/layout/activity_send_comment.xml
@@ -186,6 +186,17 @@
 
     </RelativeLayout>
 
+
+    <TextView
+        android:id="@+id/btn_graph"
+        android:layout_gravity="center"
+        android:text="详情图表"
+
+        android:textColor="@color/design_default_color_primary"
+        android:max="20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <Button
         android:id="@+id/btn_send_comment"
         android:layout_width="wrap_content"
